--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "jquery": true
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["gulpfile.babel.js", "gulp/**/*"]}]
   }
 }
