--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/eslint-parser": "7.15.0",
     "@babel/preset-env": "7.15.0",
     "@babel/register": "7.15.3",
+    "del": "6.0.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.24.1",
