--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "sass",
     "linters"
   ],
+  "browserslist": [
+    "last 2 versions"
+  ],
   "author": "Klubnika2009",
   "license": "WTFPL",
   "devDependencies": {
@@ -25,6 +28,16 @@
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.24.1",
-    "gulp": "4.0.2"
+    "gulp": "4.0.2",
+    "gulp-autoprefixer": "8.0.0",
+    "gulp-clean-css": "4.3.0",
+    "gulp-group-css-media-queries": "1.2.2",
+    "gulp-if": "3.0.0",
+    "gulp-notify": "4.0.0",
+    "gulp-plumber": "1.2.1",
+    "gulp-rename": "2.0.0",
+    "gulp-sass": "5.0.0",
+    "gulp-sourcemaps": "3.0.0",
+    "sass": "1.38.1"
   }
 }
