--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "*.js": "eslint",
     "*.scss": "stylelint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "keywords": [
     "gulp",
     "js",
@@ -42,6 +47,7 @@
     "gulp-rename": "2.0.0",
     "gulp-sass": "5.0.0",
     "gulp-sourcemaps": "3.0.0",
+    "husky": "4.3.8",
     "lint-staged": "11.1.2",
     "sass": "1.38.1",
     "stylelint": "13.13.1",
