--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gulp-rename": "2.0.0",
     "gulp-sass": "5.0.0",
     "gulp-sourcemaps": "3.0.0",
-    "husky": "4.3.8",
+    "husky-v4": "4.3.8",
     "lint-staged": "11.1.2",
     "sass": "1.38.1",
     "stylelint": "13.13.1",
