--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/eslint-parser": "7.15.0",
     "@babel/preset-env": "7.15.0",
     "@babel/register": "7.15.3",
+    "babel-loader": "8.2.2",
     "browser-sync": "2.27.5",
     "del": "6.0.0",
     "eslint": "7.32.0",
@@ -54,6 +55,8 @@
     "stylelint-config-rational-order": "0.1.2",
     "stylelint-config-standard": "22.0.0",
     "stylelint-order": "4.1.0",
-    "stylelint-scss": "3.20.1"
+    "stylelint-scss": "3.20.1",
+    "webpack": "5.51.1",
+    "webpack-stream": "6.1.2"
   }
 }
