--- a/package.json
+++ b/package.json
@@ -37,18 +37,22 @@
     "del": "6.0.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.24.1",
+    "eslint-plugin-import": "2.24.2",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "8.0.0",
+    "gulp-changed": "4.0.3",
     "gulp-clean-css": "4.3.0",
     "gulp-group-css-media-queries": "1.2.2",
     "gulp-if": "3.0.0",
+    "gulp-imagemin": "7.1.0",
     "gulp-notify": "4.0.0",
     "gulp-plumber": "1.2.1",
     "gulp-rename": "2.0.0",
     "gulp-sass": "5.0.0",
     "gulp-sourcemaps": "3.0.0",
+    "gulp-webp": "4.0.1",
     "husky-v4": "4.3.8",
+    "imagemin-pngquant": "9.0.2",
     "lint-staged": "11.1.2",
     "sass": "1.38.1",
     "stylelint": "13.13.1",
